welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: ':' expected but '(' found.
	def motif(getMondeHauteur():Color):Array[Color] = {
                                 ^Array1:24: error: identifier expected but '}' found.
}
^